fix team cards not appearing on mobile

--- a/src/styles/about/about-hero.scss
+++ b/src/styles/about/about-hero.scss
@@ -13,6 +13,7 @@
   box-shadow: 0 2px 9px rgba($black,.15);
   color: $white;
   flex: 0 0 300px;
+  height: 300px;
   margin: 15px;
   max-width: 300px;
   overflow: visible;
